--- a/package.json
+++ b/package.json
@@ -3,13 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.17.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-indiana-drag-scroll": "^2.2.1",
+    "react-range": "^1.10.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.6.1",
     "react-scripts": "5.0.1",
+    "react-use": "^17.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -35,5 +44,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "@tailwindcss/postcss": "^4.1.8",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4",
+    "postcss-loader": "^8.1.1",
+    "tailwindcss": "^4.1.8"
   }
 }
